added hero section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
       <button>Login</button>
     </header>
 
-    <main></main>
+    <main>
+      <section id="hero">
+        <h1>Discover Your Next Destination</h1>
+        <p>Discover Iconic Places and Hidden Gems of India</p>
+
+        <div>
+          <button><a href="#about">Explore</a></button>
+          <button><a href="#destinations">Book Now</a></button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
