added about section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,74 @@
         <h1>Discover Your Next Destination</h1>
         <p>Discover Iconic Places and Hidden Gems of India</p>
 
-        <div>
+        <div class="hero-btns-wrapper">
           <button><a href="#about">Explore</a></button>
           <button><a href="#destinations">Book Now</a></button>
         </div>
+      </section>
+
+      <section id="about">
+        <section>
+          <h2>About Us</h2>
+          <p>Discover places that make every journey feel unforgettable.</p>
+          <p>
+            Travel is about the moments you remember. That’s why we highlight
+            destinations across the country that offer unique
+            experiences—peaceful nature spots, cultural hubs, vibrant cities,
+            and everything in between.
+          </p>
+        </section>
+
+        <section>
+          <h2>Features</h2>
+          <p>Everything you need to explore the country, all in one place.</p>
+
+          <article>
+            <h3>Curated Destinations</h3>
+            <p>
+              Discover handpicked locations from popular cities to lesser-known
+              escapes, each chosen for its beauty, culture, or unique
+              experience.
+            </p>
+          </article>
+          <article>
+            <h3>Clean & Simple Information</h3>
+            <p>
+              Find everything you need at a glance—best time to visit, what to
+              see, local tips, and more.
+            </p>
+          </article>
+          <article>
+            <h3>Travel Inspiration</h3>
+            <p>
+              Browse destinations by interest—nature, heritage, adventure, food,
+              relaxation—so you can plan based on your mood.
+            </p>
+          </article>
+          <article>
+            <h3>Updated Travel Highlights</h3>
+            <p>
+              Stay inspired with trending destinations, seasonal picks, and
+              must-visit locations.
+            </p>
+          </article>
+        </section>
+
+        <section>
+          <h2>Explore by Interests</h2>
+          <p>Find the experiences that match your mood.</p>
+          <p>
+            Whether you’re drawn to peaceful natural landscapes, rich cultural
+            heritage, or thrilling adventures, our curated selections help you
+            discover destinations that inspire and delight.
+          </p>
+
+          <img src="" alt="nature category" />
+          <img src="" alt="heritage category" />
+          <img src="" alt="adventure category" />
+          <img src="" alt="relaxation category" />
+        </section>
+        <button>View More</button>
       </section>
     </main>
   </body>
