added destinations section

--- a/index.html
+++ b/index.html
@@ -95,6 +95,37 @@
         </section>
         <button>View More</button>
       </section>
+
+      <section id="destinations">
+        <h2>Explore Popular Destinations</h2>
+        <p>Handpicked packages for your next unforgettable journey.</p>
+
+        <article>
+          <img src="" alt="" />
+          <h3>Tour Package Name</h3>
+          <p>Rs. xxxx</p>
+          <p>Book</p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h3>Tour Package Name</h3>
+          <p>Rs. xxxx</p>
+          <p>Book</p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h3>Tour Package Name</h3>
+          <p>Rs. xxxx</p>
+          <p>Book</p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h3>Tour Package Name</h3>
+          <p>Rs. xxxx</p>
+          <p>Book</p>
+        </article>
+        <button>View More</button>
+      </section>
     </main>
   </body>
 </html>
