--- a/index.html
+++ b/index.html
@@ -166,5 +166,67 @@
         </form>
       </section>
     </main>
+
+    <footer>
+      <section>
+        <h3>About</h3>
+        <ul>
+          <li><a href="#about">About us</a></li>
+          <li><a href="/">Blog</a></li>
+          <li><a href="/">Careers</a></li>
+          <li><a href="/">Jobs</a></li>
+          <li><a href="/">Gallery</a></li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Support</h3>
+        <ul>
+          <li><a href="#contact">Contact us</a></li>
+          <li><a href="/">Online Chat</a></li>
+          <li><a href="/">Whatsapp</a></li>
+          <li><a href="/">Ticketing</a></li>
+          <li><a href="/">Call Center</a></li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>FAQ</h3>
+        <ul>
+          <li><a href="/">Account</a></li>
+          <li><a href="/">Booking</a></li>
+          <li><a href="/">Payments</a></li>
+          <li><a href="/">Returns</a></li>
+          <li><a href="/">Privacy Policy</a></li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Newsletter</h3>
+        <p>
+          Stay updated with our latest travel tips and destination highlights.
+        </p>
+
+        <form>
+          <label for="newsletter" class="sr-only">Enter your email</label>
+          <input
+            type="email"
+            id="newsletter"
+            placeholder="Enter your email"
+            required
+          />
+
+          <button type="submit">Submit</button>
+        </form>
+      </section>
+
+      <section>
+        <ul>
+          <li><i class="fa-brands fa-instagram"></i></li>
+          <li><i class="fa-brands fa-square-facebook"></i></li>
+          <li><i class="fa-brands fa-youtube"></i></li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
