--- a/index.html
+++ b/index.html
@@ -106,13 +106,43 @@
             </div>
 
             <div class="category-wrapper">
-              <img src="" alt="nature category" />
-              <img src="" alt="heritage category" />
-              <img src="" alt="adventure category" />
-              <img src="" alt="relaxation category" />
+              <div class="img-container">
+                <span>Nature</span>
+                <img
+                  class="border-radius"
+                  src="/images/nature_category.png"
+                  alt="nature category"
+                />
+              </div>
+              <div class="img-container">
+                <span>Heritage</span>
+                <img
+                  class="border-radius"
+                  src="/images/heritage_category.png"
+                  alt="heritage category"
+                />
+              </div>
+              <div class="img-container">
+                <span>Adventure</span>
+                <img
+                  class="border-radius"
+                  src="/images/adventure_category.png"
+                  alt="adventure category"
+                />
+              </div>
+              <div class="img-container">
+                <span>Relaxation</span>
+                <img
+                  class="border-radius"
+                  src="/images/relaxation_category.png"
+                  alt="relaxation category"
+                />
+              </div>
             </div>
           </section>
-          <button>View More</button>
+          <div class="view-more-btn-wrapper">
+            <button>View More</button>
+          </div>
         </section>
 
         <section id="destinations">
@@ -121,34 +151,113 @@
 
           <div class="destination-cards-wrapper">
             <article>
-              <img src="" alt="img-1" />
-              <h3>Tour Package Name</h3>
-              <p>Rs. xxxx</p>
-              <p>Book</p>
+              <div class="img-container">
+                <p class="days">6 days & 5 nights</p>
+                <p class="rating"><i class="fa-regular fa-star"></i>4.5</p>
+                <img
+                  class="border-radius"
+                  src="/images/goa_package.png"
+                  alt="img-1"
+                />
+                <p class="location">
+                  <i class="fa-solid fa-location-dot"></i>Goa
+                </p>
+                <p class="description">
+                  Experience Goa’s vibrant beaches, where lively shacks, soft
+                  sands, and sparkling waters promise both adventure and
+                  relaxation.
+                </p>
+              </div>
+              <h3>Most Wanted Goa Package</h3>
+              <div class="booking">
+                <span>₹8650 <span>/adult</span></span>
+                <span>Book</span>
+              </div>
             </article>
+
             <article>
-              <img src="" alt="img-2" />
-              <h3>Tour Package Name</h3>
-              <p>Rs. xxxx</p>
-              <p>Book</p>
+              <div class="img-container">
+                <p class="days">5 nights & 6 days</p>
+                <p class="rating"><i class="fa-regular fa-star"></i>4.5</p>
+                <img
+                  class="border-radius"
+                  src="/images/jaipur_package.png"
+                  alt="img-1"
+                />
+                <p class="location">
+                  <i class="fa-solid fa-location-dot"></i>Jaipur
+                </p>
+                <p class="description">
+                  Explore Jaipur’s majestic charm, where grand forts, pink-hued
+                  palaces, and bustling bazaars bring Rajasthan’s royal history
+                  to life.
+                </p>
+              </div>
+              <h3>Jaipur Golden Triangle Tour</h3>
+              <div class="booking">
+                <span>₹5029 <span>/adult</span></span>
+                <span>Book</span>
+              </div>
             </article>
+
             <article>
-              <img src="" alt="img-3" />
-              <h3>Tour Package Name</h3>
-              <p>Rs. xxxx</p>
-              <p>Book</p>
+              <div class="img-container">
+                <p class="days">2 nights & 3 days</p>
+                <p class="rating"><i class="fa-regular fa-star"></i>4.1</p>
+                <img
+                  class="border-radius"
+                  src="/images/allepey_package.jpg"
+                  alt="img-1"
+                />
+                <p class="location">
+                  <i class="fa-solid fa-location-dot"></i>Allepey
+                </p>
+                <p class="description">
+                  Sail through Alleppey’s serene backwaters, enjoy peaceful
+                  sunsets, lush greenery, and the gentle rhythm of life along
+                  the water.
+                </p>
+              </div>
+              <h3>Special Allepey Houseboat Cruise Package</h3>
+              <div class="booking">
+                <span>₹9173 <span>/adult</span></span>
+                <span>Book</span>
+              </div>
             </article>
+
             <article>
-              <img src="" alt="img-4" />
-              <h3>Tour Package Name</h3>
-              <p>Rs. xxxx</p>
-              <p>Book</p>
+              <div class="img-container">
+                <p class="days">3 nights & 4 days</p>
+                <p class="rating"><i class="fa-regular fa-star"></i>4.8</p>
+                <img
+                  class="border-radius"
+                  src="/images/shimla_package.jpg"
+                  alt="img-1"
+                />
+                <p class="location">
+                  <i class="fa-solid fa-location-dot"></i>Shimla
+                </p>
+                <p class="description">
+                  Breathe in the cool mountain air of Shimla, where pine
+                  forests, winding hills, come together for a refreshing
+                  Himalayan getaway.
+                </p>
+              </div>
+              <h3>Best of Shimla Tour Package</h3>
+              <div class="booking">
+                <span>₹10,636 <span>/adult</span></span>
+                <span>Book</span>
+              </div>
             </article>
           </div>
-          <button>View More</button>
+          <div class="view-more-btn-wrapper">
+            <button>View More</button>
+          </div>
         </section>
+      </div>
 
-        <section id="contact">
+      <section id="contact">
+        <div class="contact-wrapper">
           <div>
             <h2>Contact Us</h2>
             <p>Need help planning your trip?</p>
@@ -162,7 +271,7 @@
             </button>
           </div>
 
-          <form>
+          <form class="border-radius">
             <label for="name">Name</label>
             <input
               type="text"
@@ -188,8 +297,8 @@
 
             <button type="submit">Send Message</button>
           </form>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <footer>
