--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
 
             <div class="category-wrapper">
-              <div class="img-container">
+              <div class="category-img-container">
                 <button>Nature</button>
                 <img
                   class="border-radius"
@@ -130,7 +130,7 @@
                   alt="nature category"
                 />
               </div>
-              <div class="img-container">
+              <div class="category-img-container">
                 <button>Heritage</button>
                 <img
                   class="border-radius"
@@ -138,7 +138,7 @@
                   alt="heritage category"
                 />
               </div>
-              <div class="img-container">
+              <div class="category-img-container">
                 <button>Adventure</button>
                 <img
                   class="border-radius"
@@ -146,7 +146,7 @@
                   alt="adventure category"
                 />
               </div>
-              <div class="img-container">
+              <div class="category-img-container">
                 <button>Relaxation</button>
                 <img
                   class="border-radius"
@@ -169,7 +169,7 @@
 
           <div class="destination-cards-wrapper">
             <article>
-              <div class="img-container">
+              <div class="destination-img-container">
                 <p class="days">6 days & 5 nights</p>
                 <p class="rating"><i class="fa-regular fa-star"></i>4.5</p>
                 <img
@@ -178,7 +178,7 @@
                   alt="img-1"
                 />
                 <p class="location">
-                  <i class="fa-solid fa-location-dot"></i>Goa
+                  <i class="fa-solid fa-location-dot"></i> Goa
                 </p>
                 <p class="description">
                   Experience Goa’s vibrant beaches, where lively shacks, soft
@@ -186,15 +186,15 @@
                   relaxation.
                 </p>
               </div>
-              <h3>Most Wanted Goa Package</h3>
+              <h3 class="package-name">Most Wanted Goa Package</h3>
               <div class="booking">
-                <span>₹8650 <span>/adult</span></span>
-                <span>Book</span>
+                <span class="price">₹8650 <span>/adult</span></span>
+                <button>Book</button>
               </div>
             </article>
 
             <article>
-              <div class="img-container">
+              <div class="destination-img-container">
                 <p class="days">5 nights & 6 days</p>
                 <p class="rating"><i class="fa-regular fa-star"></i>4.5</p>
                 <img
@@ -203,7 +203,7 @@
                   alt="img-1"
                 />
                 <p class="location">
-                  <i class="fa-solid fa-location-dot"></i>Jaipur
+                  <i class="fa-solid fa-location-dot"></i> Jaipur
                 </p>
                 <p class="description">
                   Explore Jaipur’s majestic charm, where grand forts, pink-hued
@@ -211,15 +211,15 @@
                   to life.
                 </p>
               </div>
-              <h3>Jaipur Golden Triangle Tour</h3>
+              <h3 class="package-name">Jaipur Golden Triangle Tour</h3>
               <div class="booking">
-                <span>₹5029 <span>/adult</span></span>
-                <span>Book</span>
+                <span class="price">₹5029 <span>/adult</span></span>
+                <button>Book</button>
               </div>
             </article>
 
             <article>
-              <div class="img-container">
+              <div class="destination-img-container">
                 <p class="days">2 nights & 3 days</p>
                 <p class="rating"><i class="fa-regular fa-star"></i>4.1</p>
                 <img
@@ -228,7 +228,7 @@
                   alt="img-1"
                 />
                 <p class="location">
-                  <i class="fa-solid fa-location-dot"></i>Allepey
+                  <i class="fa-solid fa-location-dot"></i> Allepey
                 </p>
                 <p class="description">
                   Sail through Alleppey’s serene backwaters, enjoy peaceful
@@ -236,15 +236,17 @@
                   the water.
                 </p>
               </div>
-              <h3>Special Allepey Houseboat Cruise Package</h3>
+              <h3 class="package-name">
+                Special Allepey Houseboat Cruise Package
+              </h3>
               <div class="booking">
-                <span>₹9173 <span>/adult</span></span>
-                <span>Book</span>
+                <span class="price">₹9173 <span>/adult</span></span>
+                <button>Book</button>
               </div>
             </article>
 
             <article>
-              <div class="img-container">
+              <div class="destination-img-container">
                 <p class="days">3 nights & 4 days</p>
                 <p class="rating"><i class="fa-regular fa-star"></i>4.8</p>
                 <img
@@ -253,7 +255,7 @@
                   alt="img-1"
                 />
                 <p class="location">
-                  <i class="fa-solid fa-location-dot"></i>Shimla
+                  <i class="fa-solid fa-location-dot"></i> Shimla
                 </p>
                 <p class="description">
                   Breathe in the cool mountain air of Shimla, where pine
@@ -261,10 +263,10 @@
                   Himalayan getaway.
                 </p>
               </div>
-              <h3>Best of Shimla Tour Package</h3>
+              <h3 class="package-name">Best of Shimla Tour Package</h3>
               <div class="booking">
-                <span>₹10,636 <span>/adult</span></span>
-                <span>Book</span>
+                <span class="price">₹10,636 <span>/adult</span></span>
+                <button>Book</button>
               </div>
             </article>
           </div>
@@ -279,7 +281,7 @@
           <div>
             <h2>Contact Us</h2>
             <p class="subtitle">Need help planning your trip?</p>
-            <p>
+            <p class="para">
               Reach out to us and we’ll guide you on your next journey. Just
               fill out the form and our team will reach out.
             </p>
@@ -308,6 +310,7 @@
 
             <label for="message">Message</label>
             <textarea
+              rows="12"
               id="message"
               placeholder="Enter your message"
               required
@@ -356,7 +359,7 @@
       </div>
 
       <div>
-        <section>
+        <section class="newsletter-wrapper">
           <h3>Newsletter</h3>
           <p>
             Stay updated with our latest travel tips and destination highlights.
@@ -375,7 +378,9 @@
           </form>
         </section>
 
-        <section>
+        <section class="copyright-wrapper">
+          <p>© 2025 Trailblaze. All rights reserved.</p>
+
           <ul class="social-media-icons">
             <li><i class="fa-brands fa-instagram"></i></li>
             <li><i class="fa-brands fa-square-facebook"></i></li>
