styled buttons and added hover and transition effect

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <a href="#hero">Trailblaze</a>
+      <a class="logo" href="#hero">Trailblaze</a>
 
       <nav>
         <ul>
@@ -157,7 +157,7 @@
             </div>
           </section>
           <div class="view-more-btn-wrapper">
-            <button>View More</button>
+            <button class="dark-bg-btn">View More</button>
           </div>
         </section>
 
@@ -271,7 +271,7 @@
             </article>
           </div>
           <div class="view-more-btn-wrapper">
-            <button>View More</button>
+            <button class="dark-bg-btn">View More</button>
           </div>
         </section>
       </div>
@@ -285,10 +285,15 @@
               Reach out to us and we’ll guide you on your next journey. Just
               fill out the form and our team will reach out.
             </p>
-            <button><i class="fa-solid fa-phone"></i>+91-755-540-9528</button>
-            <button>
-              <i class="fa-solid fa-envelope"></i>info@trailblaze.co.id
-            </button>
+
+            <div class="contact-btns-wrapper">
+              <button>
+                <i class="fa-solid fa-phone"></i> +91-755-540-9528
+              </button>
+              <button>
+                <i class="fa-solid fa-envelope"></i> info@trailblaze.co.id
+              </button>
+            </div>
           </div>
 
           <form class="border-radius">
@@ -316,7 +321,7 @@
               required
             ></textarea>
 
-            <button type="submit">Send Message</button>
+            <button type="submit" class="dark-bg-btn">Send Message</button>
           </form>
         </div>
       </section>
@@ -374,7 +379,7 @@
               required
             />
 
-            <button type="submit">Submit</button>
+            <button type="submit" class="dark-bg-btn">Submit</button>
           </form>
         </section>
 
@@ -382,9 +387,21 @@
           <p>© 2025 Trailblaze. All rights reserved.</p>
 
           <ul class="social-media-icons">
-            <li><i class="fa-brands fa-instagram"></i></li>
-            <li><i class="fa-brands fa-square-facebook"></i></li>
-            <li><i class="fa-brands fa-youtube"></i></li>
+            <li>
+              <a href="https://www.instagram.com/" target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/" target="_blank"
+                ><i class="fa-brands fa-square-facebook"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/" target="_blank"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </li>
           </ul>
         </section>
       </div>
