refactored category card div with button and added hover styles, cleaned up header section code and fixed scroll not restoring to default after nav link click issue

--- a/index.html
+++ b/index.html
@@ -31,20 +31,22 @@
       <button id="menu-btn"><i class="fa-solid fa-bars"></i></button>
 
       <div id="menu-tray" class="hidden">
-        <p>Trailblaze</p>
+        <span>Trailblaze</span>
+        <button id="close-btn"><i class="fa-solid fa-xmark"></i></button>
         <nav>
           <ul>
-            <hr />
-            <li><a href="#about">About</a></li>
-            <hr />
-            <li><a href="#destinations">Destinations</a></li>
-            <hr />
-            <li><a href="#contact">Contact</a></li>
-            <hr />
-            <button class="login-mobile">Login</button>
+            <li>
+              <button><a href="#about">About</a></button>
+            </li>
+            <li>
+              <button><a href="#destinations">Destinations</a></button>
+            </li>
+            <li>
+              <button><a href="#contact">Contact</a></button>
+            </li>
+            <li><button class="login-mobile">Login</button></li>
           </ul>
         </nav>
-        <button id="close-btn"><i class="fa-solid fa-xmark"></i></button>
       </div>
     </header>
 
@@ -140,38 +142,38 @@
             </div>
 
             <div class="category-wrapper">
-              <div class="category-img-container">
-                <button>Nature</button>
+              <button class="category-img-container">
+                <span>Nature</span>
                 <img
                   class="border-radius"
                   src="/images/nature_category.png"
                   alt="nature category"
                 />
-              </div>
-              <div class="category-img-container">
-                <button>Heritage</button>
+              </button>
+              <button class="category-img-container">
+                <span>Heritage</span>
                 <img
                   class="border-radius"
                   src="/images/heritage_category.png"
                   alt="heritage category"
                 />
-              </div>
-              <div class="category-img-container">
-                <button>Adventure</button>
+              </button>
+              <button class="category-img-container">
+                <span>Adventure</span>
                 <img
                   class="border-radius"
                   src="/images/adventure_category.png"
                   alt="adventure category"
                 />
-              </div>
-              <div class="category-img-container">
-                <button>Relaxation</button>
+              </button>
+              <button class="category-img-container">
+                <span>Relaxation</span>
                 <img
                   class="border-radius"
                   src="/images/relaxation_category.png"
                   alt="relaxation category"
                 />
-              </div>
+              </button>
             </div>
           </section>
           <div class="view-more-btn-wrapper">
