fixed issue with images not displaying on live site

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <span>Nature</span>
                 <img
                   class="border-radius"
-                  src="/images/nature_category.png"
+                  src="./images/nature_category.png"
                   alt="nature category"
                 />
               </button>
@@ -154,7 +154,7 @@
                 <span>Heritage</span>
                 <img
                   class="border-radius"
-                  src="/images/heritage_category.png"
+                  src="./images/heritage_category.png"
                   alt="heritage category"
                 />
               </button>
@@ -162,7 +162,7 @@
                 <span>Adventure</span>
                 <img
                   class="border-radius"
-                  src="/images/adventure_category.png"
+                  src="./images/adventure_category.png"
                   alt="adventure category"
                 />
               </button>
@@ -170,7 +170,7 @@
                 <span>Relaxation</span>
                 <img
                   class="border-radius"
-                  src="/images/relaxation_category.png"
+                  src="./images/relaxation_category.png"
                   alt="relaxation category"
                 />
               </button>
@@ -194,7 +194,7 @@
                 <p class="rating"><i class="fa-regular fa-star"></i>4.5</p>
                 <img
                   class="border-radius"
-                  src="/images/goa_package.png"
+                  src="./images/goa_package.png"
                   alt="img-1"
                 />
                 <p class="location">
@@ -219,7 +219,7 @@
                 <p class="rating"><i class="fa-regular fa-star"></i>4.5</p>
                 <img
                   class="border-radius"
-                  src="/images/jaipur_package.png"
+                  src="./images/jaipur_package.png"
                   alt="img-1"
                 />
                 <p class="location">
@@ -244,7 +244,7 @@
                 <p class="rating"><i class="fa-regular fa-star"></i>4.1</p>
                 <img
                   class="border-radius"
-                  src="/images/allepey_package.jpg"
+                  src="./images/allepey_package.jpg"
                   alt="img-1"
                 />
                 <p class="location">
@@ -271,7 +271,7 @@
                 <p class="rating"><i class="fa-regular fa-star"></i>4.8</p>
                 <img
                   class="border-radius"
-                  src="/images/shimla_package.jpg"
+                  src="./images/shimla_package.jpg"
                   alt="img-1"
                 />
                 <p class="location">
