fixed hero background img not showing issue and added alt for destinations imgs

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <img
                   class="border-radius"
                   src="./images/goa_package.png"
-                  alt="img-1"
+                  alt="Arambol beach, Goa"
                 />
                 <p class="location">
                   <i class="fa-solid fa-location-dot"></i> Goa
@@ -220,7 +220,7 @@
                 <img
                   class="border-radius"
                   src="./images/jaipur_package.png"
-                  alt="img-1"
+                  alt="Amer Fort, Jaipur"
                 />
                 <p class="location">
                   <i class="fa-solid fa-location-dot"></i> Jaipur
@@ -245,7 +245,7 @@
                 <img
                   class="border-radius"
                   src="./images/allepey_package.jpg"
-                  alt="img-1"
+                  alt="Houseboats, Allepey"
                 />
                 <p class="location">
                   <i class="fa-solid fa-location-dot"></i> Allepey
@@ -272,7 +272,7 @@
                 <img
                   class="border-radius"
                   src="./images/shimla_package.jpg"
-                  alt="img-1"
+                  alt="Shimla"
                 />
                 <p class="location">
                   <i class="fa-solid fa-location-dot"></i> Shimla
