fixed JavaScript path issue and contact section background not showing issue

--- a/index.html
+++ b/index.html
@@ -427,6 +427,6 @@
       </div>
     </footer>
 
-    <script src="/Javascript/script.js"></script>
+    <script src="./Javascript/script.js"></script>
   </body>
 </html>
